--- a/style.css
+++ b/style.css
@@ -164,30 +164,6 @@ body {
 }
 
 
-.yellowcolorbtn{
-  position: relative;
-  display: inline-block;
-  padding: 10px 10px;
-  margin: 40px 0;
-  font-family: consolas;
-  background-color: #050801;
-  color: #FFFF00;
-  border-color: #050801;
-  border-radius: 4px;
-  font-size: 24px;
-  text-decoration: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  transition: 0.5s;
-  letter-spacing: 4px;
-}
-.yellowcolorbtn:hover{
-   background-color: #FFFF00;
-   border-color:#FFFF00 ;
-  color: #050801;
-  box-shadow: 0 0 5px #FFFF00, 0 0 15px #FFFF00, 0 0 20px #FFFF00,
-    0 0 50px #FFFF00;
-}
 
 
 
@@ -521,7 +497,7 @@ border-color: #050801 ;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #16384c;
+    background: #E0E0E0;
     font-family: 'Poppins',sans-serif;
     
 }
