--- a/styleforman.css
+++ b/styleforman.css
@@ -3,18 +3,18 @@
   position:relative;
   top: 50px;
   left: 750px;
-  width: 390px;
+  width: 490px;
   height: 550px;
   /* display: flex;
   justify-content: center;
   align-items: center; */
   font-size: 20px;
 
-  background: #060c21;
+  background: #F8F8F8;
   margin: 40px;
 }
 
-.boxingcard:before {
+/* .boxingcard:before {
   content: "";
   position: absolute;
   top: -2px;
@@ -23,8 +23,8 @@
   bottom: -2px;
   background: #fff;
   z-index: -1;
-}
-
+} */
+/* 
 .boxingcard:after {
   content: "";
   position: absolute;
@@ -35,14 +35,14 @@
   background: #fff;
   z-index: -2;
   filter: blur(40px);
-}
+} */
 
 /* .boxingcard:before,
 .boxingcard:after {
   background: linear-gradient(235deg, #89ff00, #010615, #00bcd4);
 } */
 
-.boxingcard .glass {
+/* .boxingcard .glass {
   position: absolute;
   top: 0;
   left: 0;
@@ -51,11 +51,11 @@
   display: block;
   background: rgba(255, 255, 255, 0.1);
   pointer-events: none;
-}
+} */
 
 .boxingcard .contentinside {
   padding: 20px;
-  color: #fff;
+  color: black;
   text-align: center;
 }
 
@@ -63,8 +63,8 @@
 
  .boxingcard2 {
    position: relative;
-   top: 600px;
-  left: -250px;
+   top: -400px;
+  left: -300px;
   width: 330px;
   height: 550px; 
    display: flex;
