popup forms attached

--- a/style.css
+++ b/style.css
@@ -490,6 +490,13 @@ border-color: #050801 ;
   }
 }
 
+/* .modal-notify .modal-header {
+    border-radius: 3px 3px 0 0;
+}
+.modal-notify .modal-content {
+    border-radius: 3px;
+} */
+
 
 /*card for other services*/
 #main{
